objects/Order.object
<CustomObject><fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields><fields>
        <fullName>Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields><fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Indicator__c</fullName>
        <description>This is an icon field indicating status, tied to the Order Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;"/servlet/servlet.ImageServer?id="&amp;CASE( Status, 
"Draft", "01541000001Qwue&amp;oid=00D41000001MYfZ", 
"Active", "01541000001Qwub&amp;oid=00D41000001MYfZ", 
"Activated", "01541000001Qwub&amp;oid=00D41000001MYfZ", 
"01541000001Qwub&amp;oid=00D41000001MYfZ"),"Status",24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Track_It__c</fullName>
        <formula>CASE( Shipping_Method__c , "Fedex", HYPERLINK("http://www.fedex.com/Tracking?cntry_code=us&amp;tracknumbers="&amp; Tracking_ID__c,"Track"), "UPS", HYPERLINK("http://wwwapps.ups.com/WebTracking/processInputRequestHTMLVersion=5.0&amp;sort_by=status&amp;loc=en_US&amp;InquiryNumber1="&amp; Tracking_ID__c &amp; "&amp;track.x=32&amp;track.y=7", "Track"), "DHL", HYPERLINK ("http://track.dhl-usa.com/TrackByNbr.asp?ShipmentNumber=" &amp; Tracking_ID__c,"Track"),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track It!</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Tracking_ID__c</fullName>
        <description>Used by the "Track It" field to look up the shipping status of a package.</description>
        <inlineHelpText>Sample Tracking Number:
FedEx: 123456789012</inlineHelpText>
        <label>Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"), 
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)), 
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)) 
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews><listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews><listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews><recordTypes>
        <fullName>Order_Business</fullName>
        <active>true</active>
        <description>Used for B2B order use cases.  Includes contract fields.</description>
        <label>Order - Business</label>
    </recordTypes><recordTypes>
        <fullName>Order_Consumer</fullName>
        <active>true</active>
        <description>Order record type used for consumer use case.  Contract and related business fields have been removed from this layout.</description>
        <label>Order - Consumer</label>
    </recordTypes></CustomObject>